# custom-ai-bot

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  payload.json  phases.MD  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docker/nginx/: nginx.conf
requirements/: requirements.txt
scripts/: seed.py
src/: main.py
src/ai/: __init__.py  base.py  schemas.py  service.py  transformers_provider.py
src/api/: app.py  health.py  webhook.py
src/bot/: dispatcher.py
src/bot/filters/: __init__.py  command.py  mention.py
src/bot/handlers/: commands.py  messages.py  personality.py
src/bot/middlewares/: auth.py  context.py  logging.py  rate_limit.py
src/cache/: client.py  rate_limiter.py
src/core/: config.py
src/db/: alembic.ini  session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 0001_initial_tables.py
src/db/models/: __init__.py  chat.py  conversation.py  document.py  memory.py  message.py  personality.py  user.py
src/models/: __init__.py  chat.py  user.py
src/personality/: __init__.py  seed.py  service.py
src/vector/: client.py
